--- a/GestionChampionnat/src/main/resources/templates/championship/day_results.html
+++ b/GestionChampionnat/src/main/resources/templates/championship/day_results.html
@@ -2,40 +2,9 @@
 <html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Résultats journée</title>
-    <link rel="stylesheet" href="../../static/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font
-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .game-row {
-        display: flex;
-        justify-content: center;
-        margin: 10px 0;
-        font-family: sans-serif;
-    }
-
-    .match-info {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
-
-    .team-name {
-        font-weight: bold;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-    }
-
-    .score {
-        font-size: 18px;
-        font-weight: bold;
-        padding: 4px 12px;
-        background-color: #222;
-        color: white;
-        border-radius: 6px;
-    }
-    </style>
+    <title>Résultats journée [[${championShip.name}]]</title>
+    <link rel="stylesheet" data-th-href="@{/css/style.css}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <header>
     <nav>
@@ -55,57 +24,55 @@ awesome/4.7.0/css/font-awesome.min.css">
                 <span data-th-if="${#authorization.expression('hasRole(''ADMIN'')')}">
                     <a data-th-href="@{/admin/dashboard}">Dashboard</a>
                 </span>
-                <form data-th-action="@{/logout}" method="post" style="display:inline;">
-                    <button type="submit">Déconnexion</button>
-                </form>
+                <a data-th-href="@{/logout}">Déconnexion</a>
             </div>
         </div>
     </nav>
 
 </header>
 <body>
+    <main>
+        <h2>Calendrier et résultats [[${championShip.name}]] [[${#dates.format(#dates.createNow(), 'yyyy')}]]</h2>
+        <h3>[[${day.number}]]e journée</h3>
 
-<h2>Calendrier et résultats [[${championShip.name}]] [[${#dates.format(#dates.createNow(), 'yyyy')}]]</h2>
-<h3>[[${day.number}]]e journée</h3>
+        <div data-th-each="game : ${games}" class="game-row">
+            <div class="match-date">
+                <div>
+                    <select id="daySelect"
+                            data-th-field="*{day.id}"
+                            onchange="redirectToDay(this)">
+                        <option data-th-each="d : ${championShip.days}"
+                                data-th-value="${d.id}"
+                                data-th-selected="${d.id} == ${day.id}"
+                                data-th-text="${d.number} + 'e journée'">
+                        </option>
+                    </select>
+                </div>
 
-<div data-th-each="game : ${games}" class="game-row">
-    <div class="match-date">
-        <div>
-            <select id="daySelect"
-                    data-th-field="*{day.id}"
-                    onchange="redirectToDay(this)">
-                <option data-th-each="d : ${championShip.days}"
-                        data-th-value="${d.id}"
-                        data-th-selected="${d.id} == ${day.id}"
-                        data-th-text="${d.number} + 'e journée'">
-                </option>
-            </select>
+                <script data-th-inline="javascript">
+                    function redirectToDay(selectElement) {
+                        var selectedDayId = selectElement.value;
+                        var championShipId = /*[[${championShip.id}]]*/ '0';
+                        window.location.href = '/championship/' + championShipId + '/day/' + selectedDayId;
+                    }
+                </script>
+            </div>
+            <div class="match-info">
+                <span class="team-name">
+                    <img data-th-src="@{'/img/teams/' + ${game.team1.logo}}" alt="logo" width="20">
+                    [[${game.team1.name}]]
+                </span>
+
+                <span class="score">
+                    [[${game.team1Point}]] - [[${game.team2Point}]]
+                </span>
+
+                <span class="team-name">
+                    <img data-th-src="@{'/img/teams/' + ${game.team2.logo}}" alt="logo" width="20">
+                    [[${game.team2.name}]]
+                </span>
+            </div>
         </div>
-
-        <script data-th-inline="javascript">
-            function redirectToDay(selectElement) {
-                var selectedDayId = selectElement.value;
-                var championShipId = /*[[${championShip.id}]]*/ '0';
-                window.location.href = '/championship/' + championShipId + '/day/' + selectedDayId;
-            }
-        </script>
-    </div>
-    <div class="match-info">
-        <span class="team-name">
-            <img data-th-src="@{'/img/teams/' + ${game.team1.logo}}" alt="logo" width="20">
-            [[${game.team1.name}]]
-        </span>
-
-        <span class="score">
-            [[${game.team1Point}]] - [[${game.team2Point}]]
-        </span>
-
-        <span class="team-name">
-            <img data-th-src="@{'/img/teams/' + ${game.team2.logo}}" alt="logo" width="20">
-            [[${game.team2.name}]]
-        </span>
-    </div>
-</div>
-
+    </main>
 </body>
 </html>
