--- a/GestionChampionnat/src/main/resources/templates/index.html
+++ b/GestionChampionnat/src/main/resources/templates/index.html
@@ -4,36 +4,8 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Résultats par compétition</title>
-    <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="stylesheet" data-th-href="@{/css/style.css}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .championship-section {
-            margin-bottom: 2rem;
-        }
-        .championship-section h2 {
-            font-size: 1.2rem;
-            text-transform: uppercase;
-            margin-bottom: 0.5rem;
-            color: #333;
-        }
-        .championships {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1.5rem;
-        }
-        .championships a {
-            text-decoration: none;
-            color: #222;
-            font-weight: 500;
-            display: flex;
-            align-items: center;
-        }
-        .championships a img {
-            width: 14px;
-            height: 10px;
-            margin-right: 0.4rem;
-        }
-    </style>
 </head>
 <header>
     <nav>
@@ -53,9 +25,10 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
                 <span data-th-if="${#authorization.expression('hasRole(''ADMIN'')')}">
                     <a data-th-href="@{/admin/dashboard}">Dashboard</a>
                 </span>
-                <form data-th-action="@{/logout}" method="post" style="display:inline;">
-                    <button type="submit">Déconnexion</button>
-                </form>
+                <div data-th-if="${#authorization.expression('isAnonymous()')}">
+                    <a data-th-href="@{/connexion}">Connexion</a>
+                </div>
+                <a data-th-href="@{/logout}">Déconnexion</a>
             </div>
         </div>
     </nav>
